tests/baselines/reference/computedPropertyNamesContextualType8_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType8_ES6.ts(6,5): error TS2322: Type '{ [x: 文字]: "" | 0; }' is not assignable to type 'I'.
  Index signatures are incompatible.
    Type '"" | 0' is not assignable to type '真假'.
      Type '""' is not assignable to type '真假'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesContextualType8_ES6.ts (1 errors) ====
    interface I {
        [s: string]: boolean;
        [s: number]: boolean;
    }
    
    var o: I = {
        ~
!!! error TS2322: Type '{ [x: 文字]: "" | 0; }' is not assignable to type 'I'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type '"" | 0' is not assignable to type '真假'.
!!! error TS2322:       Type '""' is not assignable to type '真假'.
        [""+"foo"]: "",
        [""+"bar"]: 0
    }